# silkroad-origin-mobile-helper

./: CHANGES_SUMMARY.md  README.md  calibrate_touch.py  debug_window.py  extract_templates.py  main.py  pyproject.toml  todo.md
config/: settings.yaml
docs/: TOUCH_CALIBRATION.md  phase10_joystick.md  phase11_joystick_hotreload.md  phase12_state_optimization.md  phase13_multi_touch.md  phase1_geruest.md  phase2_focus_detection.md  phase3_window_tracking.md  phase4_config.md  phase5_hotkey.md  phase6_relative_click.md  phase8_state_engine.md
examples/: calibration_example.py
src/silkroad_companion/: main.py
src/silkroad_companion/application/: focus_tracker.py  mapping_engine.py  vision_engine.py  window_tracker.py
src/silkroad_companion/domain/: config.py  focus_service.py  input_service.py  models.py  vision_service.py  window_service.py
src/silkroad_companion/infrastructure/: adb_service.py  config_loader.py  keyboard_input_service.py  kwin_focus_service.py  mouse_input_service.py  opencv_vision_service.py  touch_input_service.py
src/silkroad_companion/presentation/: main_window.py
tests/: test_basic.py  test_config.py  test_evdev.py  test_focus.py  test_mapping.py  test_parsing.py  test_vision.py  test_window.py
