[project]
name = "silkroad-companion"
version = "0.1.0"
description = "Specialized input mapper for Silkroad Origin Mobile on Waydroid"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "evdev>=1.9.3",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.10.6",
    "pynput>=1.7.7",
    "pyside6>=6.8.2.1",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-qt>=4.5.0",
    "ruff>=0.15.19",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "PT"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
